--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,34 +19,12 @@
       crossorigin="anonymous"
     ></script>
 
-    <script></script>
-
-    <style>
-      .container {
-        position: relative;
-        height: 50%;
-        width: 50%;
-      }
-
-      .input_video {
-        /* position: absolute; */
-        height: 100%;
-        width: 100%;
-        transform: scale(-1, 1);
-      }
-
-      .output_canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-      }
-    </style>
+    <!-- include styles.css -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <span id="status">Hello there</span>
     <div class="container">
       <video class="input_video"></video>
       <canvas class="output_canvas" width="1280px" height="720px"></canvas>
