--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,9 @@
       <canvas class="output_canvas" width="1280px" height="720px"></canvas>
     </div>
 
+    <button id="download">Download</button>
+    <a href="" download id="hidden-dl" hidden></a>
+
     <script src="script.js"></script>
   </body>
 </html>
